# test-malloc-overriding

./: .gitignore  Cargo.toml  README.md
.cargo/: config.fixed.toml
.github/workflows/: ci.yml
c-dylib/: Cargo.toml
c-dylib/src/: dep.c  lib.rs
dl-utils/: Cargo.toml
dl-utils/src/: lib.rs
rust-dylib/: Cargo.toml  build.rs
rust-dylib/inner/: Cargo.toml
rust-dylib/inner/src/: lib.rs
rust-dylib/src/: lib.rs
test-dylib/: Cargo.toml
test-dylib/src/: main.rs
test-unused/: Cargo.toml
test-unused/src/: main.rs
